[gd_scene load_steps=2 format=3 uid="uid://m4c8hp47kokd"]

[ext_resource type="Script" uid="uid://cie4765y7nai" path="res://UI/pause_menu.gd" id="1_ltd3m"]

[node name="PauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ltd3m")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.244776, 0.244776, 0.244776, 1)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="ReplayButton" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Chơi lại"

[node name="HomeButton" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Về Home"

[node name="SoundButton" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Tắt âm thanh"

[connection signal="pressed" from="CenterContainer/VBoxContainer/ReplayButton" to="." method="_on_replay_button_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/HomeButton" to="." method="_on_home_button_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/SoundButton" to="." method="_on_sound_button_pressed"]
